Removed unnecessary use of UserGestureTokens for mouse events.

This CL gets rid of the UGT states in mouse event handlers.  This
separates mousedown/mouseup gestures into two gestures, allowing
two popups per click (one extra is now allowed between the two
handlers).  This is acceptable since the number is still small,
and we have browsers (Firefox & Safari) that allow multiple popups.
Moreover, the current single gesture state is not clean because
for a long (>1sec) press, we still have two periods where a popup
is allowed: the second after mousedown, then the second after
mouseup.

This is the first CL in a sequence to get rid of UserGestureTokens.

Bug: 752158
Change-Id: I94336d8f449ad1d9455c946277b2caa27fa508c1