third_party/WebKit/Source/core/frame/WebFrameWidgetImpl.cpp
@@ -415,12 +415,12 @@ WebInputEventResult WebFrameWidgetImpl::HandleInputEvent(
         gesture_indicator =
             WTF::WrapUnique(new UserGestureIndicator(UserGestureToken::Create(
                 &node->GetDocument(), UserGestureToken::kNewGesture)));
-        mouse_capture_gesture_token_ = gesture_indicator->CurrentToken();
         break;
       case WebInputEvent::kMouseUp:
         event_type = EventTypeNames::mouseup;
-        gesture_indicator = WTF::WrapUnique(
-            new UserGestureIndicator(std::move(mouse_capture_gesture_token_)));
+        gesture_indicator =
+            WTF::WrapUnique(new UserGestureIndicator(UserGestureToken::Create(
+                &node->GetDocument(), UserGestureToken::kNewGesture)));
         break;
       default:
         NOTREACHED();
@@ -809,11 +809,6 @@ void WebFrameWidgetImpl::HandleMouseDown(LocalFrame& main_frame,
   }
 
   PageWidgetEventHandler::HandleMouseDown(main_frame, event);
-
-  if (event.button == WebMouseEvent::Button::kLeft && mouse_capture_node_) {
-    mouse_capture_gesture_token_ =
-        main_frame.GetEventHandler().TakeLastMouseDownGestureToken();
-  }
 
   if (view_impl->GetPagePopup() && page_popup &&
       ToWebPagePopupImpl(view_impl->GetPagePopup())
