third_party/WebKit/Source/core/frame/WebFrameWidgetImpl.h
@@ -52,7 +52,6 @@ class Frame;
 class Element;
 class LocalFrame;
 class PaintLayerCompositor;
-class UserGestureToken;
 class WebLayer;
 class WebLayerTreeView;
 class WebMouseEvent;
@@ -200,7 +199,6 @@ class WebFrameWidgetImpl final : public WebFrameWidgetBase,
 
   // If set, the (plugin) node which has mouse capture.
   Member<Node> mouse_capture_node_;
-  RefPtr<UserGestureToken> mouse_capture_gesture_token_;
 
   // This is owned by the LayerTreeHostImpl, and should only be used on the
   // compositor thread. The LayerTreeHostImpl is indirectly owned by this
